Implementando a Api Rest

--- a/src/app/contatos-listagem/contatos-listagem.component.html
+++ b/src/app/contatos-listagem/contatos-listagem.component.html
@@ -3,14 +3,12 @@
 <table border="1">
 <thead>
     <th>ID</th>
-    <th>NOME</th>
-    <th>TELEFONE</th>
+    <th>PENSAMENTO</th>
 </thead>
 <tbody>
     <tr *ngFor="let c of contatos">   
     <td>{{c.id}}</td>
-    <td>{{c.nome}}</td>
-    <td>{{c.telefone}}</td>
+    <td>{{c.pensamento}}</td>
 </tr>
 </tbody>
 </table>
